--- a/GForum/GForum.Data/GForum.Data.csproj
+++ b/GForum/GForum.Data/GForum.Data.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DbInitializer.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
