--- a/GForum/GForum.Data.Models/GForum.Data.Models.csproj
+++ b/GForum/GForum.Data.Models/GForum.Data.Models.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Category.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
