--- a/GForum/GForum.Data/GForum.Data.csproj
+++ b/GForum/GForum.Data/GForum.Data.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationData.cs" />
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="DbInitializer.cs" />
     <Compile Include="Migrations\Configuration.cs" />
