Update styles, fix UserIdentity not being applied audit info.

--- a/GForum/GForum.Data.Models/GForum.Data.Models.csproj
+++ b/GForum/GForum.Data.Models/GForum.Data.Models.csproj
@@ -64,5 +64,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GForum.Common\GForum.Common.csproj">
+      <Project>{E7914C4F-111D-4236-8379-09ACB0FCA834}</Project>
+      <Name>GForum.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
