Add gravatar html helper, update views, make email optional at register.

--- a/GForum/GForum.Web/Views/Web.config
+++ b/GForum/GForum.Web/Views/Web.config
@@ -19,6 +19,7 @@
                 <add namespace="System.Web.Routing" />
                 <add namespace="Humanizer" />
                 <add namespace="GForum.Web" />
+                <add namespace="GForum.Web.Helpers" />
             </namespaces>
         </pages>
     </system.web.webPages.razor>
