--- a/GForum/GForum.Web/packages.config
+++ b/GForum/GForum.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
+  <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net46" />
