--- a/GForum/GForum.Web/GForum.Web.csproj
+++ b/GForum/GForum.Web/GForum.Web.csproj
@@ -221,7 +221,10 @@
     <Compile Include="Helpers\MarkdownToHtmlHelper.cs" />
     <Compile Include="Models\Account\LoginViewModel.cs" />
     <Compile Include="Models\Account\RegisterViewModel.cs" />
-    <Compile Include="Models\Forum\IndexViewModel.cs" />
+    <Compile Include="Models\Forum\AuthorViewModel.cs" />
+    <Compile Include="Models\Forum\CategoryWithPostsViewModel.cs" />
+    <Compile Include="Models\Forum\CategoryViewModel.cs" />
+    <Compile Include="Models\Forum\PostViewModel.cs" />
     <Compile Include="Models\Manage\ChangeEmailViewModel.cs" />
     <Compile Include="Models\Manage\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Users\IndexViewModel.cs" />
