--- a/GForum/GForum.Web/packages.config
+++ b/GForum/GForum.Web/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Heroic.AutoMapper" version="4.0.0" targetFramework="net46" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
@@ -42,6 +44,6 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
