Add upvote functionality.

--- a/GForum/GForum.Common/GForum.Common.csproj
+++ b/GForum/GForum.Common/GForum.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\VoteType.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
