--- a/GForum/GForum.Data.Models/GForum.Data.Models.csproj
+++ b/GForum/GForum.Data.Models/GForum.Data.Models.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Contracts\IEntity.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vote.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
