--- a/GForum/GForum.Web/packages.config
+++ b/GForum/GForum.Web/packages.config
@@ -45,6 +45,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="toastr" version="2.1.1" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
