--- a/GForum/GForum.Web/Web.config
+++ b/GForum/GForum.Web/Web.config
@@ -22,7 +22,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
-    <httpRuntime targetFramework="4.6" />
+    <httpRuntime targetFramework="4.6" requestValidationMode="2.0" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
