--- a/GForum/GForum.Data/GForum.Data.csproj
+++ b/GForum/GForum.Data/GForum.Data.csproj
@@ -55,10 +55,11 @@
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="DbInitializer.cs" />
+    <Compile Include="Contracts\IUnitOfWork.cs" />
+    <Compile Include="EntityFrameworkRepository.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
