--- a/GForum/GForum.Web.Tests/packages.config
+++ b/GForum/GForum.Web.Tests/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="Moq" version="4.7.137" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
