Add category service tests, codecov autodiscover tests.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,12 +8,10 @@ build:
   verbosity: minimal
 
 after_test:
-- >-
-  GForum\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe
-  -register:user
-  -target:"GForum\packages\NUnit.ConsoleRunner.3.7.0\tools\nunit3-console.exe"
-  -targetargs:"GForum\GForum.Web.Tests\bin\Debug\GForum.Web.Tests.dll"
-  -filter:"+[*]* -[*.Tests]*"
-  -output:".\coverage.xml"
-- >-
-  GForum\packages\Codecov.1.0.3\tools\codecov.exe -f ".\coverage.xml"
+- ps: >-
+    GForum\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe
+    -register:user
+    -target:"GForum\packages\NUnit.ConsoleRunner.3.7.0\tools\nunit3-console.exe"
+    -targetargs:"$(ls -r Gforum\*\bin\Debug\*.Tests.dll | % FullName)"
+    -filter:"+[*]* -[*.Tests]*" -output:".\coverage.xml"
+- ps: GForum\packages\Codecov.1.0.3\tools\codecov.exe -f ".\coverage.xml"
