--- a/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
+++ b/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
@@ -52,8 +52,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
