Add PotService tests.

--- a/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
+++ b/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryServiceTests.cs" />
+    <Compile Include="PostServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
