--- a/GForum/GForum.Services/GForum.Services.csproj
+++ b/GForum/GForum.Services/GForum.Services.csproj
@@ -44,8 +44,10 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="Contracts\ICategoryService.cs" />
     <Compile Include="Contracts\IPostService.cs" />
+    <Compile Include="Contracts\IVoteService.cs" />
     <Compile Include="PostService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VotesService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GForum.Common\GForum.Common.csproj">
