Seperate VoteService from PostService, inject Automapper.

--- a/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
+++ b/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CategoryServiceTests.cs" />
     <Compile Include="PostServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoteServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
