--- a/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
+++ b/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
@@ -107,6 +107,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\UsersControllerTests.cs" />
+    <Compile Include="Helpers\GravatarHtmlHelperTests.cs" />
+    <Compile Include="Helpers\MarkdownToHtmlHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTests.cs" />
   </ItemGroup>
