--- a/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
+++ b/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
@@ -106,6 +106,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CategoriesControllerTests.cs" />
     <Compile Include="Controllers\UsersControllerTests.cs" />
     <Compile Include="Helpers\GravatarHtmlHelperTests.cs" />
     <Compile Include="Helpers\MarkdownToHtmlHelperTests.cs" />
@@ -119,9 +120,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GForum.Common\GForum.Common.csproj">
+      <Project>{e7914c4f-111d-4236-8379-09acb0fca834}</Project>
+      <Name>GForum.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GForum.Data.Models\GForum.Data.Models.csproj">
       <Project>{87e3ef97-ea81-4dac-8b1d-c0ca7ad6a49f}</Project>
       <Name>GForum.Data.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GForum.Services\GForum.Services.csproj">
+      <Project>{51385AF6-58EF-44BD-B72E-3B00B0B6747E}</Project>
+      <Name>GForum.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\GForum.Web\GForum.Web.csproj">
       <Project>{F11A6E47-5E89-4790-A8EA-8EB9866A8FDA}</Project>
