--- a/GForum/GForum.Web.Tests/packages.config
+++ b/GForum/GForum.Web.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Moq" version="4.7.137" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net46" />
@@ -14,4 +15,5 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="NUnit" version="3.8.1" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
 </packages>
