--- a/GForum/GForum.Web/GForum.Web.csproj
+++ b/GForum/GForum.Web/GForum.Web.csproj
@@ -227,6 +227,8 @@
     </Compile>
     <Compile Include="Helpers\GravatarHtmlHelper.cs" />
     <Compile Include="Helpers\MarkdownToHtmlHelper.cs" />
+    <Compile Include="Contracts\Identity\IApplicationSignInManager.cs" />
+    <Compile Include="Contracts\Identity\IApplicationUserManager.cs" />
     <Compile Include="Models\Account\LoginViewModel.cs" />
     <Compile Include="Models\Account\RegisterViewModel.cs" />
     <Compile Include="Models\Forum\AuthorViewModel.cs" />
