Update appveyor settings.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,27 @@
 image: Visual Studio 2017
 
+branches:
+  only:
+    - master
+
+cache:
+  - Gforum\packages -> **\packages.config
+
 before_build:
-- nuget restore GForum\GForum.sln
+  - nuget restore GForum\GForum.sln
+
+configuration: Release
 
 build:
   project: GForum\GForum.sln
   verbosity: minimal
 
-after_test:
-- ps: >-
-    GForum\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe
-    -register:user
-    -target:"GForum\packages\NUnit.ConsoleRunner.3.7.0\tools\nunit3-console.exe"
-    -targetargs:"$(ls -r Gforum\*\bin\Debug\*.Tests.dll | % FullName)"
-    -filter:"+[*]* -[*.Tests]*" -output:".\coverage.xml"
-- ps: GForum\packages\Codecov.1.0.3\tools\codecov.exe -f ".\coverage.xml"
+test_script:
+  - ps: >-
+      GForum\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe
+      -register:user
+      -target:"GForum\packages\NUnit.ConsoleRunner.3.7.0\tools\nunit3-console.exe"
+      -targetargs:"$(ls -r Gforum\*\bin\$configuration\*.Tests.dll | % FullName)"
+      -filter:"+[*]* -[*.Tests]*"
+      -output:".\coverage.xml"
+  - ps: GForum\packages\Codecov.1.0.3\tools\codecov.exe -f ".\coverage.xml"
