--- a/GForum/GForum.Web/GForum.Web.csproj
+++ b/GForum/GForum.Web/GForum.Web.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\PostsAjaxController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Helpers\AjaxAuthorizeAttribute.cs" />
     <Compile Include="Identity\ApplicationSignInManager.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -280,6 +281,7 @@
     <Content Include="Scripts\Site\delete-controller.js" />
     <Content Include="Scripts\Site\edit-controller.js" />
     <Content Include="Scripts\Site\votes-controller.js" />
+    <Content Include="Scripts\Site\toastr-config.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
