--- a/GForum/GForum.Web/Web.config
+++ b/GForum/GForum.Web/Web.config
@@ -28,6 +28,16 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".otf" />
+      <remove fileExtension=".ttf" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <mimeMap fileExtension=".otf" mimeType="font/otf" />
+      <mimeMap fileExtension=".ttf" mimeType="font/ttf" />
+    </staticContent>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
