Add azure publish profile to appveyor.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ configuration: Release
 build:
   project: GForum\GForum.sln
   verbosity: minimal
+  publish_wap: true
 
 test_script:
   - ps: >-
@@ -25,3 +26,11 @@ test_script:
       -filter:"+[*]* -[*.Tests]*"
       -output:".\coverage.xml"
   - ps: GForum\packages\Codecov.1.0.3\tools\codecov.exe -f ".\coverage.xml"
+
+deploy:
+  provider: WebDeploy
+  server: https://gforum-mvc.scm.azurewebsites.net:443/msdeploy.axd?site=gforum-mvc
+  website: gforum-mvc
+  username: $gforum-mvc
+  password: 
+    secure: M69u+JBNrtCkgyZpo6/OFYdU9i95TinkyWObdqXZafDKra2AYfNd4ucvOXpgOlxHMOxcOulhDIKRKm1EFbAAEw==
