Refractor view models.

--- a/GForum/GForum.Web/GForum.Web.csproj
+++ b/GForum/GForum.Web/GForum.Web.csproj
@@ -234,12 +234,12 @@
     <Compile Include="Contracts\Identity\IApplicationUserManager.cs" />
     <Compile Include="Models\Account\LoginViewModel.cs" />
     <Compile Include="Models\Account\RegisterViewModel.cs" />
-    <Compile Include="Models\Forum\AuthorViewModel.cs" />
-    <Compile Include="Models\Forum\CategoryWithPostsViewModel.cs" />
-    <Compile Include="Models\Forum\CategoryViewModel.cs" />
-    <Compile Include="Models\Forum\PostSubmitViewModel.cs" />
-    <Compile Include="Models\Forum\PostViewModel.cs" />
-    <Compile Include="Models\Forum\SubmittedByPartialViewModel.cs" />
+    <Compile Include="Models\Shared\AuthorViewModel.cs" />
+    <Compile Include="Models\Categories\CategoryWithPostsViewModel.cs" />
+    <Compile Include="Models\Categories\CategoryViewModel.cs" />
+    <Compile Include="Models\Posts\PostSubmitViewModel.cs" />
+    <Compile Include="Models\Posts\PostViewModel.cs" />
+    <Compile Include="Models\Shared\SubmittedByPartialViewModel.cs" />
     <Compile Include="Models\Manage\ChangeEmailViewModel.cs" />
     <Compile Include="Models\Manage\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Users\UserViewModel.cs" />
