--- a/GForum/GForum.Web/Areas/Admin/Views/web.config
+++ b/GForum/GForum.Web/Areas/Admin/Views/web.config
@@ -17,8 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
+        <add namespace="Humanizer" />
         <add namespace="GForum.Web" />
-        
+        <add namespace="GForum.Web.Helpers" />
+
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -33,4 +35,14 @@
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
+
+  <system.web>
+    <compilation>
+      <assemblies>
+        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Globalization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
+  </system.web>
 </configuration>
