--- a/GForum/GForum.Web/packages.config
+++ b/GForum/GForum.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Grid.Mvc" version="3.0.0" targetFramework="net46" />
   <package id="Heroic.AutoMapper" version="4.0.0" targetFramework="net46" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
