--- a/GForum/GForum.Data.Models/GForum.Data.Models.csproj
+++ b/GForum/GForum.Data.Models/GForum.Data.Models.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Contracts\IEntity.cs" />
+    <Compile Include="Contracts\IEntityWithGuid.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vote.cs" />
