Add commentservice tests.

--- a/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
+++ b/GForum/GForum.Services.Tests/GForum.Services.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CategoryServiceTests.cs" />
     <Compile Include="Abstracts\Fakes\Entitity_Fake.cs" />
+    <Compile Include="CommentServiceTests.cs" />
     <Compile Include="PostServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Abstracts\ServiceTests.cs" />
